fixing issue where picker result text would go off-screen

--- a/projects/novo-elements/src/elements/list/List.scss
+++ b/projects/novo-elements/src/elements/list/List.scss
@@ -63,7 +63,7 @@ button[list-item] {
   .list-item {
     display: flex;
     flex-direction: column;
-    flex: 1 0 auto;
+    flex: 1 0 100%;
   }
   .novo-item-header {
     .novo-item-header-container {
